--- a/Texas.html
+++ b/Texas.html
@@ -93,7 +93,7 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-black" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Food</h2>
-      <p class="w3-opacity w3-center"><i>Remember to grab a ribeye!</i></p><br>
+      <p class="w3-opacity w3-center"><i>Looking for a place to eat?</i></p><br>
 
       <ul class="w3-ul w3-border w3-white w3-text-grey">
         <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
@@ -108,7 +108,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>New York</b></p>
             <p class="w3-opacity">Fri 27 Nov 2016</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -117,7 +117,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Paris</b></p>
             <p class="w3-opacity">Sat 28 Nov 2016</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -126,7 +126,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>San Francisco</b></p>
             <p class="w3-opacity">Sun 29 Nov 2016</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
         </div>
       </div>
