--- a/California.html
+++ b/California.html
@@ -16,10 +16,10 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card-2">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#home" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="#info" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INFO</a>
-    <a href="#food" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FOOD</a>
-    <a href="#social_life" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SOCIAL LIFE</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INFO</a>
+    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FOOD</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SOCIAL LIFE</a>
     <a href="#fashion" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FASHION</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
