--- a/California.html
+++ b/California.html
@@ -19,8 +19,7 @@ body {font-family: "Lato", sans-serif}
     <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INFO</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FOOD</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SOCIAL LIFE</a>
-    <a href="#fashion" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FASHION</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FASHION</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -35,10 +34,10 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#info" class="w3-bar-item w3-button w3-padding-large">INFO</a>
-  <a href="#food" class="w3-bar-item w3-button w3-padding-large">FOOD</a>
-  <a href="#social life" class="w3-bar-item w3-button w3-padding-large">SOCIAL LIFE</a>
-  <a href="#fashion" class="w3-bar-item w3-button w3-padding-large">FASHION</a>
+  <a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
+  <a href="#tour" class="w3-bar-item w3-button w3-padding-large">TOUR</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+  <a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a>
 </div>
 
 <!-- Page content -->
