--- a/NewYork.html
+++ b/NewYork.html
@@ -170,36 +170,36 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
  
-   <div class="w3-black" id="social life">
+   <div class="w3-black" id="Culture">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">Fashion</h2>
+      <h2 class="w3-wide w3-center">Culture</h2>
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="necessary.jpg" alt="Necessary Clothing" style="width:100%" class="w3-hover-opacity">
+          <img src="Le Bain.jpg" alt="Le Bain" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b>Necessary Clothing</b></p>
-            <p class="w3-opacity">442 Broadway, New York, NY 10013</p>
-            <p>.</p>
+            <p><b>Le Bain</b></p>
+            <p class="w3-opacity">The Standard, High Line, 848 Washington St, New York, NY 10014 Hours: 2PM–4AM</p>
+            <p>Located on the rooftop of the Standerd Hight Line, Le Bain is well known for its  indoor pool located in the middle of the dance floor. Hence the name which is french for "the bath". They also have a swimsut vending machine just in case you don't have a bathing suit.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="kirna.jpg" alt="Kirna Zabete" style="width:100%" class="w3-hover-opacity">
+          <img src="cielo club.jpg" alt="Cielo Club" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b>Kirna Zabete</b></p>
-            <p class="w3-opacity">498 Red Apple Ct, Central Valley, NY 10917</p>
-            <p> .</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <p><b>Cielo</b></p>
+            <p class="w3-opacity">18 Little West 12th St, New York, NY 10014 Hours: Open today · 10PM–4AM</p>
+            <p>The Cielo club is known for its dynamic sound system and its Big Name DJs. Which are sure to keep you on your feet and dancing the entire night .</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">RSVP now</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="Birchbox.jpg" alt="Birchbox Soho" style="width:100%" class="w3-hover-opacity">
+          <img src="Marquee.jpg" alt="Marquee" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b>Birchbox Soho</b></p>
-            <p class="w3-opacity">433 W Broadway, New York, NY 10012</p>
-            <p></p>
+            <p><b>Marquee</b></p>
+            <p class="w3-opacity">289 10th Ave, New York, NY 10001 Hours: 11PM–4AM</p>
+            <p>The Marquee is the best place for club hoopers. Its newly renevated and the soul focue of the club is music </p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
