--- a/NewYork.html
+++ b/NewYork.html
@@ -23,7 +23,7 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Merchandise</a>
+        <a href="#" class="w3-bar-item w3-button">Night Life</a>
         <a href="#" class="w3-bar-item w3-button">Extras</a>
         <a href="#" class="w3-bar-item w3-button">Media</a>
       </div>
@@ -170,7 +170,7 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
  
-   <div class="w3-black" id="Culture">
+   <div class="w3-black" id="Night Life">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Culture</h2>
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
