--- a/Homepage.html
+++ b/Homepage.html
@@ -19,78 +19,25 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
 }
-input[type=text]{
- width: 200px;
- box-sizing: border-box;
- border: 2px solid #ccc;
- border-radius: 4px;
- font-size: 16px;
- background-color: white;
- background-image: url('searchicon.png');
- background-size: 40px 40px;
- background-postion: 5px 5px;
- background-repeat: no-repeat;
- padding: 12px 20px 12px 40px;
- -webkit-transition: width 0.4s ease-in-out;
- transition: width 0.4s ease-in-out;
- }
- input[type=text]:focus {
-  width: 100%;
- }
- body {
-    margin: 0;
-    font-family: 'Lato', sans-serif;
-}
-
-.overlay {
-    height: 0%;
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
-    overflow-y: hidden;
-    transition: 0.5s;
-}
-
-.overlay-content {
-    position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
-}
-
-.overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
-}
-
-.overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-  .overlay {overflow-y: auto;}
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-card-2">
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT</a>
+    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MEET US</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">HELP</a>
+    <div class="w3-dropdown-hover w3-hide-small">
+      <button class="w3-padding-large w3-button" title="Culture">MORE<i class="fa fa-caret-down"></i></button>     
+      <div class="w3-dropdown-content w3-bar-block w3-card-4">
+        <a href="#" class="w3-bar-item w3-button">Activities</a>
+        <a href="#" class="w3-bar-item w3-button">Nightlife</a>
+        <a href="#" class="w3-bar-item w3-button">Interesting Facts</a>
+      </div>
+    </div>
+    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
+  </div>
+</div>
 }
 .dropbtn {
     background-color: #4CAF50;
