--- a/NewYork.html
+++ b/NewYork.html
@@ -23,7 +23,7 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="Night Life" class="w3-bar-item w3-button">Night Life</a>
+        <a href="#Night Life" class="w3-bar-item w3-button">Night Life</a>
         <a href="#" class="w3-bar-item w3-button">Extras</a>
         <a href="#" class="w3-bar-item w3-button">Media</a>
       </div>
