--- a/California.html
+++ b/California.html
@@ -52,14 +52,14 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="in n out burger picture.jpg" style="width:100%">
+    <img src="in n out burger number 4.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>IN-N-OUT Burger</h3>
       <p><b>Make sure you go animal style!</b></p>    
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="hollywood sign.jpeg" style="width:100%">
+    <img src="hollywood sign again.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>HOLLYWOOD</h3>
       <p><b>The infamous Hollywood sign!</b></p>    
