--- a/California.html
+++ b/California.html
@@ -75,15 +75,15 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="beach sunset.jpg" class="w3-round w3-margin-bottom" alt="Sunset through palm trees" style="width:60%">
       </div>
       <div class="w3-third">
         <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="disney land picture.jpg" class="w3-round w3-margin-bottom" alt="Disney Land!" style="width:60%">
       </div>
       <div class="w3-third">
         <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
+        <img src="golden-gate-bridge-lights.jpg" class="w3-round" alt="Golden Gate Bridge" style="width:60%">
       </div>
     </div>
   </div>
