--- a/Homepage.html
+++ b/Homepage.html
@@ -79,7 +79,7 @@ body, html {
     <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MEET US</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">HELP</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT US</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE<i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -92,7 +92,7 @@ body, html {
   </div>
 </div>
  
-<div class="dropdown" style="float:center">
+<div class="dropdown" style="align:center">
   <button class="dropbtn">Food</button>
   <div class="dropdown-content">
     <a href="#">California</a>
