--- a/Homepage.html
+++ b/Homepage.html
@@ -34,7 +34,7 @@ body, html {
     font-size: 16px;
     border: none;
     cursor: pointer;
-    float: center;
+    align: center;
 }
 
 .dropdown {
