--- a/Homepage.html
+++ b/Homepage.html
@@ -92,7 +92,7 @@ body, html {
   </div>
 </div>
  
-<div class="dropdown" style="align:center">
+<div class="dropdown" style="align: center;">
   <button class="dropbtn">Food</button>
   <div class="dropdown-content">
     <a href="#">California</a>
