--- a/NewYork.html
+++ b/NewYork.html
@@ -207,36 +207,36 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
   
-   <div class="w3-white" id="Fashion">
+   <div class="w3-white" id="Acivites">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Fashion</h2>
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="necessary.jpg" alt="Necessary Clothing" style="width:100%" class="w3-hover-opacity">
+          <img src="necessary.jpg" alt="Sugar Factory" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
-            <p><b>Necessary Clothing</b></p>
-            <p class="w3-opacity">442 Broadway, New York, NY 10013</p>
-            <p>.</p>
+            <p><b>Sugar Factory</b></p>
+            <p class="w3-opacity"> 1991 Broadway, New York, NY 10023</p>
+            <p>If your someone with a sweet tooth thw sugar factory is the place for you. Its wide selection of sugary treats is enough to send enyone into a sugar hight.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">RSVP now</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <img src="kirna.jpg" alt="Coney Island" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-black">
+            <p><b>Coney Island</b></p>
+            <p class="w3-opacity">1208 Surf Avenue</p>
+            <p> Located in the southermost part of brooklyn, Coney Island is an amusment park with rides and games for all ages.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="kirna.jpg" alt="Kirna Zabete" style="width:100%" class="w3-hover-opacity">
+          <img src="Birchbox.jpg" alt="Splish Slpash" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
-            <p><b>Kirna Zabete</b></p>
-            <p class="w3-opacity">498 Red Apple Ct, Central Valley, NY 10917</p>
-            <p> .</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
-          </div>
-        </div>
-        <div class="w3-third w3-margin-bottom">
-          <img src="Birchbox.jpg" alt="Birchbox Soho" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-black">
-            <p><b>Birchbox Soho</b></p>
-            <p class="w3-opacity">433 W Broadway, New York, NY 10012</p>
-            <p></p>
+            <p><b>Slpish Splash</b></p>
+            <p class="w3-opacity"> 2549 Splish Splash Dr, Calverton, NY 11933</p>
+            <p>Splish slpash is a water park located in </p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
