--- a/NewYork.html
+++ b/NewYork.html
@@ -214,7 +214,7 @@ body {font-family: "Lato", sans-serif}
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="necessary.jpg" alt="Sugar Factory" style="width:100%" class="w3-hover-opacity">
+          <img src="sugar factory.jpg" alt="Sugar Factory" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
             <p><b>Sugar Factory</b></p>
             <p class="w3-opacity"> 1991 Broadway, New York, NY 10023</p>
@@ -223,7 +223,7 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="kirna.jpg" alt="Coney Island" style="width:100%" class="w3-hover-opacity">
+          <img src="coney island.jpg" alt="Coney Island" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
             <p><b>Coney Island</b></p>
             <p class="w3-opacity">1208 Surf Avenue</p>
@@ -232,11 +232,11 @@ body {font-family: "Lato", sans-serif}
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="Birchbox.jpg" alt="Splish Slpash" style="width:100%" class="w3-hover-opacity">
+          <img src="splish slpash.jpg" alt="Splish Slpash" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
             <p><b>Slpish Splash</b></p>
             <p class="w3-opacity"> 2549 Splish Splash Dr, Calverton, NY 11933</p>
-            <p>Splish slpash is a water park located in </p>
+            <p>Splish slpash is a water park located in calvertion long island. It houses over 30 amusment rides and was name one of the top 3 water parks in the US by travel channel. </p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
