--- a/California.html
+++ b/California.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>California</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -125,6 +125,49 @@ body {font-family: "Lato", sans-serif}
             <p><b>Scoops</b></p>
             <p class="w3-opacity">712 N. Heliotrope Dr., Los Angeles, CA 90029 (East Hollywood)/p>
             <p>Vegan Icecream!!</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="w3-black" id="tour">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+      <h2 class="w3-wide w3-center">FASHION</h2>
+      <p class="w3-opacity w3-center"><i>Want to look like a native Californian?</i></p><br>
+
+      <ul class="w3-ul w3-border w3-white w3-text-grey">
+        <li class="w3-padding"> <a href="https://www.thepopularstore.com/" target="_blank">The Popular Store Beverly Hills</a><span class="w3-tag w3-red w3-margin-left"></span></li>
+        <li class="w3-padding"> <a href="https://www.mohawkgeneralstore.com/" target="_blank">Mohawk General Store</a><span class="w3-tag w3-red w3-margin-left"></span></li>
+        <li class="w3-padding"> <a href="http://www.papayaclothing.com/" target="_blank">Papaya Clothing</a><span class="w3-tag w3-red w3-margin-left"></span></li>
+      </ul>
+
+      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+        <div class="w3-third w3-margin-bottom">
+          <a href="https://www.urbanoutfitters.com/" target="_blank">Urban Outfitters</a>  
+          <div class="w3-container w3-white">
+            <p><b>Urban Outfitters</b></p>
+            <p class="w3-opacity">330 N San Fernando Blvd, Burbank, CA 91502</p>
+            <p>Heaven on earth for trendy clothing for all those that like to go with the flow!</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"></button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <a href="http://www.brandymelvilleusa.com/" target="_blank">Brandy Melville</a>  
+          <div class="w3-container w3-white">
+            <p><b>Brandy Melville</b></p>
+            <p class="w3-opacity">10958 Weyburn Ave, Los Angeles, CA 90024</p>
+            <p>Cute clothing for young adults!</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+          </div>
+        </div>
+        <div class="w3-third w3-margin-bottom">
+          <a href="http://www.torrid.com/store-details?StoreID=5472" target="_blank">Torrid</a>
+          <div class="w3-container w3-white">
+            <p><b>Torrid</b></p>
+            <p class="w3-opacity">2535 Sand Creek Rd #124, Brentwood, CA 94513/p>
+            <p>Plus size clothing!</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
