--- a/NewYork.html
+++ b/NewYork.html
@@ -333,13 +333,13 @@ body {font-family: "Lato", sans-serif}
 </div>
 <!-- Add Google Maps -->
 <div id="googleMap" style="height:400px;" class="w3-grayscale-max"></div>
-<script>
-<iframe src="https://www.google.com/maps/d/embed?mid=1q86jUFxTrkh-VyIl3YN-auR-AIM" width="640" height="480"></iframe>
+//<script>
+<iframe src="https://www.google.com/maps/d/embed?mid=1q86jUFxTrkh-VyIl3YN-auR-AIM" width="400" height="400px"></iframe>
     position: myCenter,
   });
-  marker.setMap(map);
+ // marker.setMap(map);
 }
-</script>
+//</script>
 <!--
 To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
