--- a/NewYork.html
+++ b/NewYork.html
@@ -334,7 +334,7 @@ body {font-family: "Lato", sans-serif}
 <!-- Add Google Maps -->
 <div id="googleMap" style="height:400px;" class="w3-grayscale-max"></div>
 //<script>
-<iframe src="https://www.google.com/maps/d/embed?mid=1q86jUFxTrkh-VyIl3YN-auR-AIM" width="400" height="400px"></iframe>
+<iframe src="https://www.google.com/maps/d/embed?mid=1q86jUFxTrkh-VyIl3YN-auR-AIM" width="2000" height="480"></iframe>
     position: myCenter,
   });
  // marker.setMap(map);
