--- a/Texas.html
+++ b/Texas.html
@@ -70,7 +70,7 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">TEXAS</h2>
     <p class="w3-opacity"><i>Don't Mess With Texas</i></p>
-    <p class="w3-justify">Texas offers everything you need and desire from gigantic, savory food to wild style nightlife. Texas is like it's own country! Looking for the perfect getaway see what this Texas country page has to offer. </p>
+    <p class="w3-justify">Texas offers everything you need and desire from gigantic savory food, to a wild style nightlife. Texas is like it's own country! Looking for the perfect getaway see what this Texas country page has to offer. </p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Name</p>
@@ -103,8 +103,8 @@ body {font-family: "Lato", sans-serif}
         <div class="w3-third w3-margin-bottom">
           <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b>New York</b></p>
-            <p class="w3-opacity">Fri 27 Nov 2016</p>
+            <p><b>Flora Street Cafe</b></p>
+            <p class="w3-opacity">2330 Flora St #150, Dallas, TX 75201</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
@@ -112,8 +112,8 @@ body {font-family: "Lato", sans-serif}
         <div class="w3-third w3-margin-bottom">
           <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b>Paris</b></p>
-            <p class="w3-opacity">Sat 28 Nov 2016</p>
+            <p><b>Otoko</b></p>
+            <p class="w3-opacity">1603 S Congress Ave, Austin, TX 78704/p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
@@ -121,8 +121,8 @@ body {font-family: "Lato", sans-serif}
         <div class="w3-third w3-margin-bottom">
           <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b>San Francisco</b></p>
-            <p class="w3-opacity">Sun 29 Nov 2016</p>
+            <p><b>Sprezza</b></p>
+            <p class="w3-opacity">4010 Maple Ave, Dallas, TX 75219</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
