--- a/California.html
+++ b/California.html
@@ -107,7 +107,6 @@ body {font-family: "Lato", sans-serif}
             <p><b>Sushirrito</b></p>
             <p class="w3-opacity">226 Kearny Street San Francisco, CA 94108</p>
             <p>Are you into sushi? Try a new westernized spin on a classic Japanese delicacy!</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -116,7 +115,6 @@ body {font-family: "Lato", sans-serif}
             <p><b> My Vegan Gold</b></p>
             <p class="w3-opacity">4319 W. Sunset Blvd., Los Angeles, CA 90029 (Silver Lake)</p>
             <p>Interested in some vegan delights? Check out My Vegan Gold for some guilt free guilty pleasures!</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -125,9 +123,24 @@ body {font-family: "Lato", sans-serif}
             <p><b>Scoops</b></p>
             <p class="w3-opacity">712 N. Heliotrope Dr., Los Angeles, CA 90029 (East Hollywood)/p>
             <p>Vegan Icecream!!</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  
+   <div class="w3-row w3-padding-32">
+      <div class="w3-third">
+        <p>IN-N-OUT Burger</p>
+        <img src="in n out tumblr pic.jpg" class="w3-round w3-margin-bottom" alt="in-n-out burgers" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>Sushiritto</p>
+        <img src="sushiritto.jpg" class="w3-round w3-margin-bottom" alt="sushi burritos" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>Vegan Ice cream</p>
+        <img src="vegan icecream.jpg" class="w3-round" alt="vegan ice cream" style="width:60%">
       </div>
     </div>
   </div>
@@ -150,7 +163,6 @@ body {font-family: "Lato", sans-serif}
             <p><b>Urban Outfitters</b></p>
             <p class="w3-opacity">330 N San Fernando Blvd, Burbank, CA 91502</p>
             <p>Heaven on earth for trendy clothing for all those that like to go with the flow!</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"></button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -159,7 +171,6 @@ body {font-family: "Lato", sans-serif}
             <p><b>Brandy Melville</b></p>
             <p class="w3-opacity">10958 Weyburn Ave, Los Angeles, CA 90024</p>
             <p>Cute clothing for young adults!</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -168,29 +179,24 @@ body {font-family: "Lato", sans-serif}
             <p><b>Torrid</b></p>
             <p class="w3-opacity">2535 Sand Creek Rd #124, Brentwood, CA 94513/p>
             <p>Plus size clothing!</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-  <!-- Ticket Modal -->
-  <div id="ticketModal" class="w3-modal">
-    <div class="w3-modal-content w3-animate-top w3-card-4">
-      <header class="w3-container w3-teal w3-center w3-padding-32"> 
-        <span onclick="document.getElementById('ticketModal').style.display='none'" 
-       class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-        <h2 class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Tickets</h2>
-      </header>
-      <div class="w3-container">
-        <p><label><i class="fa fa-shopping-cart"></i> Tickets, $15 per person</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="How many?">
-        <p><label><i class="fa fa-user"></i> Send To</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="Enter email">
-        <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">PAY <i class="fa fa-check"></i></button>
-        <button class="w3-button w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
-        <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
+  
+   <div class="w3-row w3-padding-32">
+      <div class="w3-third">
+        <p>Urban Outfitters</p>
+        <img src="urbanoutfitters.jpg" class="w3-round w3-margin-bottom" alt="urban outfitters" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>Disney Land!</p>
+        <img src="brandy melville.jpg" class="w3-round w3-margin-bottom" alt="brandy melville" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>Torrid</p>
+        <img src="torrid.jpg" class="w3-round" alt="torrid" style="width:60%">
       </div>
     </div>
   </div>
