--- a/NewYork.html
+++ b/NewYork.html
@@ -17,9 +17,9 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-bar w3-black w3-card-2">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BAND</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TOUR</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+    <a href="#New York" class="w3-bar-item w3-button w3-padding-large w3-hide-small">New York</a>
+    <a href="#Food" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Food</a>
+    <a href="#Fashion" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Fashion</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -34,9 +34,9 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large">TOUR</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+  <a href="#New York" class="w3-bar-item w3-button w3-padding-large">New York</a>
+  <a href="#Food" class="w3-bar-item w3-button w3-padding-large">Food</a>
+  <a href="#Fashion" class="w3-bar-item w3-button w3-padding-large">Fashion</a>
   <a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a>
 </div>
 
@@ -67,7 +67,7 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="New York">
     <h2 class="w3-wide">NEW YORK</h2>
     <p class="w3-opacity"><i>I LOVE NEW YORK</i></p>
     <p class="w3-justify">New York also known as the big apple is one of the biggest cities in America. It’s a hot spot for Fashion, Food and Culture. This makes the densely populated state no stranger to tourists. New york is home to a very diverse group of people with very different backgrounds. The city shows its appreciation for its diverse population through various cultural parades and festivals.
@@ -89,7 +89,7 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The Tour Section -->
-  <div class="w3-black" id="tour">
+  <div class="w3-black" id="Food">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">FOOD</h2>
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
@@ -244,7 +244,7 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
   
-   <div class="w3-black" id="Fashion">
+   <div class="w3-black" id="">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Fashion</h2>
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
