--- a/California.html
+++ b/California.html
@@ -186,6 +186,7 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
   
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
    <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Urban Outfitters</p>
