--- a/California.html
+++ b/California.html
@@ -193,7 +193,7 @@ body {font-family: "Lato", sans-serif}
         <img src="urbanoutfitters.jpg" class="w3-round w3-margin-bottom" alt="urban outfitters" style="width:60%">
       </div>
       <div class="w3-third">
-        <p>Disney Land!</p>
+        <p>Brandy Melville</p>
         <img src="brandy melville.jpg" class="w3-round w3-margin-bottom" alt="brandy melville" style="width:60%">
       </div>
       <div class="w3-third">
