--- a/Texas.html
+++ b/Texas.html
@@ -94,9 +94,9 @@ body {font-family: "Lato", sans-serif}
       <p class="w3-opacity w3-center"><i>Looking for a place to eat?</i></p><br>
 
       <ul class="w3-ul w3-border w3-white w3-text-grey">
-        <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>
+        <li class="w3-padding"> Signature<span class="w3-tag w3-red w3-margin-left">San Antonio</span></li>
+        <li class="w3-padding">Montlake Cut<span class="w3-tag w3-red w3-margin-left">Dallas</span></li>
+        <li class="w3-padding">Ritual<span class="w3-badge w3-right w3-margin-right">Houston</span></li>
       </ul>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
