--- a/California.html
+++ b/California.html
@@ -19,7 +19,7 @@ body {font-family: "Lato", sans-serif}
     <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INFO</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FOOD</a>
-    <a href="#fashion" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FASHION</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FASHION</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
