--- a/Texas.html
+++ b/Texas.html
@@ -67,7 +67,7 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="info">
     <h2 class="w3-wide">TEXAS</h2>
     <p class="w3-opacity"><i>Don't Mess With Texas</i></p>
     <p class="w3-justify">Texas offers everything you need and desire from gigantic savory food, to a wild style nightlife. Texas is like it's own country! Looking for the perfect getaway see what this Texas country page has to offer. </p>
@@ -88,7 +88,7 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The Tour Section -->
-  <div class="w3-black" id="tour">
+  <div class="w3-black" id="food">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Food</h2>
       <p class="w3-opacity w3-center"><i>Looking for a place to eat?</i></p><br>
@@ -130,31 +130,11 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
-
-  <!-- Ticket Modal -->
-  <div id="ticketModal" class="w3-modal">
-    <div class="w3-modal-content w3-animate-top w3-card-4">
-      <header class="w3-container w3-teal w3-center w3-padding-32"> 
-        <span onclick="document.getElementById('ticketModal').style.display='none'" 
-       class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-        <h2 class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Tickets</h2>
-      </header>
-      <div class="w3-container">
-        <p><label><i class="fa fa-shopping-cart"></i> Tickets, $15 per person</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="How many?">
-        <p><label><i class="fa fa-user"></i> Send To</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="Enter email">
-        <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">PAY <i class="fa fa-check"></i></button>
-        <button class="w3-button w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
-        <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
-      </div>
-    </div>
-  </div>
-
+  
   <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">CONTACT</h2>
-    <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
+  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="fashion">
+    <h2 class="w3-wide w3-center">FASHION</h2>
+    <p class="w3-opacity w3-center"><i>Shopping? Way ahead of you!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
         <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
