--- a/NewYork.html
+++ b/NewYork.html
@@ -24,7 +24,7 @@ body {font-family: "Lato", sans-serif}
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
         <a href="#Night Life" class="w3-bar-item w3-button">Night Life</a>
-        <a href="#" class="w3-bar-item w3-button">Extras</a>
+        <a href="#Activites" class="w3-bar-item w3-button">Activites</a>
         <a href="#" class="w3-bar-item w3-button">Media</a>
       </div>
     </div>
