--- a/California.html
+++ b/California.html
@@ -90,10 +90,12 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Tour Section -->
   <div class="w3-black" id="tour">
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">FOOD</h2>
       <p class="w3-opacity w3-center"><i>Want to indulge in some native Cali cuisine?</i></p><br>
-
+     <p class="w3-justify">California today is becoming more health conscious, and as a result of this, the demand for fresh produce is on a rise. This is not a problem for California because they are the number one U.S. producer of many common fruits and vegetables. A very big trend currently is veganism and vegetarianism which is extremely big in California. There are even a new increase of vegan and vegetarian places to eat out at in! California also has a plethra of different restaurants ranging from Mexican, Italian, Indian, Chinese, and plenty more. Make sure to check out IN-N-OUT Burger!
+</p>
       <ul class="w3-ul w3-border w3-white w3-text-grey">
         <li class="w3-padding"> <a href="http://www.in-n-out.com/" target="_blank">IN-N-OUT Burger</a><span class="w3-tag w3-red w3-margin-left"></span></li>
         <li class="w3-padding"> <a href="http://www.roscoeschickenandwaffles.com/" target="_blank">Roscoe’s House of Chicken and Waffles</a><span class="w3-tag w3-red w3-margin-left"></span></li>
